<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/player_score" />

            <TextView
                android:id="@+id/computerActionTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/computerScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/computer_score" />
        </LinearLayout>

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pick"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rockButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rock" />

            <Button
                android:id="@+id/paperButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/paper" />

            <Button
                android:id="@+id/scissorsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scissors" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>